--- a/CSS/style.css
+++ b/CSS/style.css
@@ -51,9 +51,37 @@ a:hover{
 
 #button:hover{
     transform: scale(1.08);
-    
 
-    
+}
 
+main{
+    display: flex;
+    justify-content: space-between;
+    background-color: #c2c4c3;
+}
 
+div{
+    background-color:#3A4042 ;
+    width: 627px;
+    height:184px;
+    box-shadow: 5px 5px 0 black;
+    margin-top: 115px;
+    margin-left: 90px ;
+}
+
+h1{
+    color: #0ABEB0;
+    font-size: 35px;
+    font-family: "Press Start 2P";
+    padding-top: 45px;
+    padding-bottom: 35px;
+    text-align: center;
+}
+
+h2{
+    color: #fff;
+    font-size: 25px;
+    font-family: "Press Start 2P";
+    padding-bottom: 45px;
+    text-align: center;
 }
