--- a/CSS/Components/box.css
+++ b/CSS/Components/box.css
@@ -1,12 +1,11 @@
-#box{
+.box{
     display: inline-block;
     background-color:#3A4042 ;
     box-shadow: 8px 8px 0 black;
     text-align: center;
     padding: 42px 44px;
-
 }
 
-#box h1{
+.box .title{
     padding-bottom: 28px;
 }
