--- a/CSS/Components/box.css
+++ b/CSS/Components/box.css
@@ -1,6 +1,6 @@
 .box{
     display: inline-block;
-    background-color:#3A4042 ;
+    background-color:#7C5E99 ;
     box-shadow: 8px 8px 0 black;
     text-align: center;
     padding: 42px 44px;
