--- a/CSS/Components/banner.css
+++ b/CSS/Components/banner.css
@@ -1,7 +1,23 @@
 .banner{
+    display: flex;
     background-image: url(../../assets/img/banner.png);
     background-repeat: no-repeat;
     background-size: 100%;
     height: 800px;
     border-bottom: 10px solid black;
+}
+
+.banner .wrapper{
+    display: flex;
+    flex-direction: column;
+    width: 630px;
+    margin-top: 80px;
+    margin-left: 80px;
+}
+
+
+.banner .navigation{
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 40px;
 }
