--- a/CSS/Components/title.css
+++ b/CSS/Components/title.css
@@ -4,3 +4,8 @@
     font-family: "Press Start 2P", sans-serif;;
     text-shadow: 4px 4px 0px #000;
 }
+
+.title.-second{
+    color:#fff;
+    text-align: center;
+}
