--- a/CSS/Components/card-project.css
+++ b/CSS/Components/card-project.css
@@ -6,5 +6,10 @@
     width: 280px;
     height: 280px;
     box-shadow: 10px 10px 0px white ;
+    transition: transform 100ms linear;
 
+}
+
+.card-project:hover{
+    transform: scale(1.08);
 }
